src/grafana/ingress-grafana.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  name: ingress-grafana
  namespace: grafana
spec:
  rules:
    - host: grafana.homekube.org
      http:
        paths:
          - backend:
              serviceName: grafana
              servicePort: 443
            path: /
